--- a/protective-measure/firewalls.html
+++ b/protective-measure/firewalls.html
@@ -340,13 +340,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>Firewalls are security systems that monitor and control network traffic based on defined rules. They act as a barrier between trusted internal networks and untrusted external networks like the internet. Firewalls can be hardware, software, or cloud-based, and they filter data packets to block malicious traffic. They are essential in preventing unauthorized access to systems and protecting against external attacks. Firewalls are used in both personal devices and enterprise networks. They provide visibility into traffic patterns and allow administrators to enforce security policies. This makes them a foundational tool in network defense.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Packet-Based Firewalls</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Packet-Based Firewalls</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Static Rules Filtering</h6>
@@ -362,7 +362,7 @@
 						</div>
 					</div>
 
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Stateful Firewalls</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">Stateful Firewalls</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Session Tracking</h6>
@@ -378,7 +378,7 @@
 						</div>
 					</div>
 
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Next-Generation Firewalls (NGFW)</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="management">Next-Generation Firewalls (NGFW)</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Deep Packet Inspection (DPI)</h6>
@@ -395,7 +395,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/personal-computer.jpg" target="image-viewer"><img src="../assets/personal-computer.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
@@ -433,7 +433,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
                         <p>Firewalls cannot stop threats from inside the network, like insider attacks or infected USB drives. If misconfigured, they may block legitimate traffic or allow harmful data. Advanced threats may still bypass firewalls using encryption or stealth. Firewalls require regular updates and monitoring. Basic firewalls lack deep security features like intrusion prevention. Still, they are a necessary first line of defense.</p>
                     </div>
