--- a/protective-measure/multi-factor-authentication.html
+++ b/protective-measure/multi-factor-authentication.html
@@ -340,13 +340,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>Multi-Factor Authentication (MFA) requires users to provide two or more forms of verification before accessing an account or system. This typically includes something you know (password), something you have (a phone or token), or something you are (fingerprint or facial scan). MFA adds a strong layer of protection beyond just a password. It is now widely used in online banking, email services, and business platforms. The goal is to reduce the chances of unauthorized access even if one factor is compromised. It helps prevent account takeovers and credential theft. MFA is now considered a cybersecurity best practice.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Corporate Systems</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Corporate Systems</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VPN Access Protection</h6>
@@ -362,7 +362,7 @@
 						</div>
 					</div>
 
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">E-commerce and Online Banking</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">E-commerce and Online Banking</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Payment Confirmations</h6>
@@ -378,7 +378,7 @@
 						</div>
 					</div>
 
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Personal Accounts</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="management">Personal Accounts</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Social Media Security</h6>
@@ -395,7 +395,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">How good is this software measure</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/eye.jpg" target="image-viewer"><img src="../assets/eye.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
@@ -433,7 +433,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
                         <p>MFA can be inconvenient for some users, especially when codes are delayed or devices are lost. Some methods like SMS are vulnerable to SIM-swapping attacks. Not all services support MFA, which leaves gaps. Users may ignore prompts or use weak second factors. If MFA is misconfigured, it may block legitimate users. Still, when used correctly, MFA significantly improves account security.</p>
                     </div>
