--- a/protective-measure/secure-networks.html
+++ b/protective-measure/secure-networks.html
@@ -326,7 +326,7 @@
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Secure Networks</h4>
                 <div class="flex justify-center mt-8"></div>
-                    <div class="flex items-center space-x-6 text-gray-300">
+                    <div class="flex item-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
                         <a href="#detection">Encrypted Communications</a><span>|</span>
                         <a href="#removal">Network Segmentation</a><span>|</span>
@@ -340,13 +340,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>A secure network is a system of devices, protocols, and practices designed to protect data and maintain privacy across a digital infrastructure. It uses tools like encryption, access controls, firewalls, and secure protocols (HTTPS, VPNs) to keep information safe. A secure network limits unauthorized access and detects abnormal behavior. These networks are designed with layered defenses to reduce the risk of compromise. Strong passwords, user authentication, and monitoring tools are all part of network security. It’s essential for businesses and individuals to ensure secure communications and data storage. A secure network supports cybersecurity goals like confidentiality, integrity, and availability.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Encrypted Communications</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Encrypted Communications</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VPN Tunnels</h6>
@@ -362,7 +362,7 @@
 						</div>
 					</div>
 
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Network Segmentation</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">Network Segmentation</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VLAN Configuration</h6>
@@ -380,7 +380,7 @@
 
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/network-segmentation.png" target="image-viewer"><img src="../assets/network-segmentation.png" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
@@ -418,7 +418,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
 						<p>Building and maintaining a secure network requires expertise and resources. If even one device or user is poorly configured, it can be a weak point. Secure networks may affect speed or access if not designed properly. Monitoring systems can generate too many alerts if not tuned well. Insider threats still pose a risk, even in a secure network. No network is 100% safe, but strong defenses make breaches far less likely.</p>
 					</div>
