--- a/protective-measure/update-programs-and-systems-regularly.html
+++ b/protective-measure/update-programs-and-systems-regularly.html
@@ -341,13 +341,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>Keeping software and systems up to date is a critical cybersecurity practice aimed at patching vulnerabilities, improving performance, and enhancing security features. Software vendors often release updates to address discovered bugs, security flaws, or to support new standards. Regular updates close security gaps that attackers could exploit and reduce exposure to malware and unauthorized access. Outdated systems, especially those no longer supported, are easy targets for cybercriminals. Applying updates promptly ensures compatibility with security tools, compliance with regulations, and alignment with evolving cyber threats.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Security Patches</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Security Patches</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">OS Security Updates</h6>
@@ -363,7 +363,7 @@
 						</div>
 					</div>
 
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Network Segmentation</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">Network Segmentation</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">VLAN Configuration</h6>
@@ -379,7 +379,7 @@
 						</div>
 					</div>
 
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Automatic Update Services</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="automatic">Automatic Update Services</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Operating System Update</h6>
@@ -395,7 +395,7 @@
 						</div>
 					</div>
 
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Update Management System</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="management">Update Management System</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Windows Server Update Services</h6>
@@ -413,7 +413,7 @@
 
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/datacenter.jpg" target="image-viewer"><img src="../assets/datacenter.jpg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
@@ -451,7 +451,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
 						<p>Updating systems can cause downtime or disrupt service if not properly scheduled or tested. Compatibility issues may arise, especially with legacy applications. Some critical systems cannot be updated frequently due to operational constraints (e.g., medical equipment in use). If updates are not tested, they might introduce bugs or vulnerabilities. There's also a risk that users ignore update prompts or disable auto-updates. In large organizations, poorly managed updates can lead to patch gaps, leaving some endpoints exposed.</p>
 					</div>
