update ko daw yung sa hero section sabi nila tas tinagtag ko na din extra div

--- a/protective-measure/lokced-server-room.html
+++ b/protective-measure/lokced-server-room.html
@@ -326,7 +326,7 @@
                     
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Locked Server Room</h4>
-                <div class="flex justify-center mt-8"></div>
+                <div class="flex justify-center mt-8">
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
                         <a href="#detection">Restricts Unauthorized Access</a><span>|</span>
