--- a/protective-measure/motion-detectors.html
+++ b/protective-measure/motion-detectors.html
@@ -340,13 +340,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>Motion detectors are devices that sense movement within a specific range or area. They are used in physical security to detect unauthorized presence, especially after hours. These sensors work using infrared, ultrasonic, or microwave technology. When motion is detected, they can trigger alarms, cameras, or lights. Motion detectors are often installed in hallways, server rooms, or near restricted zones. They help secure spaces without needing constant human supervision. Their use improves reaction time and adds another layer to physical security.</p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Detection Technology</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Detection Technology</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Infrared Sensors</h6>
@@ -361,7 +361,7 @@
 							<p class="">Combines infrared and microwave to reduce false alarms. Ensures reliable detection under various conditions. Adds a verification layer.</p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Alarm Activation</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">Alarm Activation</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl"></h6>Sound Alarms</h6>
@@ -376,7 +376,7 @@
 							<p class="">Turn on floodlights or interior lights when motion is detected. Increases visibility of intruders. Supports camera footage quality.</p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Monitoring Integration</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="management">Monitoring Integration</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">CCTV Connectivity</h6>
@@ -393,7 +393,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/detector1.jpeg" target="image-viewer"><img src="../assets/detector1.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
@@ -432,7 +432,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
                         <p>Motion detectors can produce false alarms due to animals, air vents, or environmental changes. If sensitivity is too low, they may miss real threats. Some types are affected by temperature or interference. They do not identify who is moving only that something is. Without proper integration, they may trigger alerts without action. In large or complex spaces, multiple sensors are required to eliminate blind spots. Despite these issues, they remain a valuable tool in multi-layered security systems.</p>
                     </div>
