--- a/protective-measure/update-programs-and-systems-regularly.html
+++ b/protective-measure/update-programs-and-systems-regularly.html
@@ -325,7 +325,7 @@
 					<a href="#" class="text-sm">Update Programs and Systems Regularly</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Updates Programs and Systems Regularly</h4>
-                <div class="flex justify-center mt-8"></div>
+                <div class="flex justify-center mt-8 mx-auto">
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
                         <a href="#detection">Security Patches</a><span>|</span>
