--- a/protective-measure/encryption.html
+++ b/protective-measure/encryption.html
@@ -326,7 +326,7 @@
                     
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Data Encryption</h4>
-                <div class="flex justify-center mt-8"></div>
+                <div class="flex justify-center mt-8">
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
                         <a href="#detection">Data Encryption at Rest</a><span>|</span>
