--- a/protective-measure/fire-suppresion-systems.html
+++ b/protective-measure/fire-suppresion-systems.html
@@ -340,13 +340,13 @@
 		<div class="bg-gradient-to-b from-black to-[#141528]">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-10">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="overview">Overview</h4>
 					<div class="space-y-2">
 						<p>Fire suppression systems are designed to detect and extinguish fires in buildings and server environments before they cause major damage. They often include sprinklers, gas-based systems (like FM-200), or chemical agents. These systems activate automatically when sensors detect smoke or heat. In IT spaces, specialized systems are used that won't damage electronic equipment. Fire suppression is critical for protecting both physical assets and business continuity. It works in tandem with fire alarms and evacuation protocols. These systems reduce risk to human life and infrastructure during emergencies./p>
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Early Fire Detection</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="detection">Early Fire Detection</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Smoke Detectors</h6>
@@ -361,7 +361,7 @@
 							<p class="">Once smoke or heat is detected, alarms alert occupants and emergency personnel. This ensures timely evacuation and minimizes casualties. Audible and visual alerts enhance awareness..</p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Suppression Mechanisms</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="removal">Suppression Mechanisms</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl"></h6>Sprinkler Systems</h6>
@@ -376,7 +376,7 @@
 							<p class="">Used in industrial areas, these release foam to blanket flammable liquids. This cuts off oxygen supply to the fire. Foam systems are essential in chemical and fuel storage zone</p>
 						</div>
 					</div>
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Safety Integration</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="management">Safety Integration</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-2">
 						<div class="p-4 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
 							<h6 class="font-medium text-xl">Emergency Lighting</h6>
@@ -393,7 +393,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h3 class="text-2xl font-medium text-[#E2C8F1]">Practical Usage</h3>
+					<h3 class="text-2xl font-medium text-[#E2C8F1]" id="practical">Practical Usage</h3>
 					<div class="grid md:grid-cols-2 grid-cols-1 md:gap-8 gap-4">
 						<div class="flex justify-center">
 							<a href="../assets/server1.jpeg" target="image-viewer"><img src="../assets/server1.jpeg" class="rounded w-full h-96 object-cover" alt="Antivirus Software" /></a>
@@ -431,7 +431,7 @@
 					</div>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Limitations</h4>
+					<h4 class="font-medium text-2xl text-[#E2C8F1]" id="limitations">Limitations</h4>
                     <div class="space-y-2">
                         <p>Fire suppression systems can be costly to install and require regular maintenance. Accidental discharge may damage equipment or cause panic. Gas-based systems can pose health risks if not installed with proper ventilation or alarms. False alarms can trigger the system unnecessarily, disrupting operations. Some chemicals used may have environmental impacts. Sprinklers are ineffective in electrical fires if not paired with proper systems. Despite these challenges, their benefits far outweigh the risks when configured properly..</p>
                     </div>
