--- a/protective-measure/firewalls.html
+++ b/protective-measure/firewalls.html
@@ -325,7 +325,7 @@
 					<a href="#" class="text-sm">Firewalls</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Firewalls</h4>
-                <div class="flex justify-center mt-8"></div>
+                <div class="flex justify-center mt-8">
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
                         <a href="#detection">Packet-Based Firewalls</a><span>|</span>
