--- a/protective-measure/secure-networks.html
+++ b/protective-measure/secure-networks.html
@@ -325,7 +325,7 @@
 					<a href="#" class="text-sm">Secure Networks</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Secure Networks</h4>
-                <div class="flex justify-center mt-8"></div>
+                <div class="flex justify-center mt-8 mx-auto">
                     <div class="flex item-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
                         <a href="#detection">Encrypted Communications</a><span>|</span>
