--- a/protective-measure/security-guard.html
+++ b/protective-measure/security-guard.html
@@ -325,7 +325,7 @@
 					<a href="#" class="text-sm">Security Guard</a>
                 </div>
                 <h4 class="text-6xl font-medium text-center mt-20">Security Guard</h4>
-                <div class="flex justify-center mt-8"></div>
+                <div class="flex justify-center mt-8">
                     <div class="flex items-center space-x-6 text-gray-300">
                         <a href="#overview">Overview</a><span>|</span>
                         <a href="#detection">Visual Deterrence</a><span>|</span>
