--- a/concept-of-cybersecurity/evolution-of-cyberthreats.html
+++ b/concept-of-cybersecurity/evolution-of-cyberthreats.html
@@ -323,10 +323,16 @@
                     <a href="#" class="text-sm">Evolution of Cybersecurity</a>
                 </div>
 				<h4 class="text-6xl font-medium text-center mt-24">Evolution of Cybersecurity</h4>
-                <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="#basic">Basic Malware to Complex Threats</a>
-                    <a href="#rise">Rise of Social Engineering</a>
-                    <a href="#modern">Modern Threats</a>
+                <div class="md:flex block items-center md:space-x-4 md:space-y-0 space-y-4 mt-4 justify-center">
+                    <div class="text-center">
+                        <a href="#basic">Basic Malware to Complex Threats </a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#rise">Rise of Social Engineering</a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#modern">Modern Threats</a>
+                    </div>
                 </div>
 			</div>
 		</div>
