--- a/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
+++ b/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
@@ -323,10 +323,16 @@
                     <a href="#" class="text-sm">Origin of Hacking and Cybercrime</a>
                 </div>
 				<h4 class="text-6xl font-medium text-center mt-24">Origin of Hacking and Cybercrime</h4>
-                <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="#emergence">Hacking as a Concept </a>
-                    <a href="#milestone">Milestone Incidents</a>
-                    <a href="#digital">Cybercrime in Digital Age</a>
+                <div class="md:flex block items-center md:space-x-4 md:space-y-0 space-y-4 mt-4 justify-center">
+                    <div class="text-center">
+                        <a href="#emergence">Hacking as a Concept </a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#milestone">Milestone Incidents</a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#digital">Cybercrime in Digital Age</a>
+                    </div>
                 </div>
 			</div>
 		</div>
