fixed responsive issues

--- a/concept-of-cybersecurity/prominent-hackers.html
+++ b/concept-of-cybersecurity/prominent-hackers.html
@@ -326,32 +326,32 @@
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] pt-24 space-y-6 px-2">
-            <div class="grid grid-cols-3 gap-10 max-w-4xl mx-auto">
+            <div class="grid grid-cols-3 gap-10 max-w-4xl mx-auto md:px-2 px-4">
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
-                            <img src="assets/prominent-hacker-kevin-mitnick.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Black and white portrait of a man speaking with a serious expression">
-                            <div class="block p-4 space-y-4">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg md:flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
+                            <img src="assets/prominent-hacker-kevin-mitnick.png" class="md:w-64 w-full md:h-64 h-96 object-cover md:rounded-s-lg rounded-t-lg" alt="Black and white portrait of a man speaking with a serious expression">
+                            <div class="block md:p-4 md:space-y-4 py-4 space-y-2">
                                 <h5 class="text-xl font-medium">Kevin Mitnick</h5>
                                 <p>Known to the FBI as the "Most Wanted Hacker," Kevin Mitnick transitioned from a notorious cybercriminal to a leading cybersecurity consultant. He now advises over 500 companies and government agencies worldwide. Mitnick is also an accomplished author, with works like The Art of Deception and The Art of Intrusion.</p>
-                                
                             </div>
                         </div>
                     </div>
 
+
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
-                            <img src="assets/prominent-hacker-tsutomu-shimomura.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Portrait of a man with long hair standing outdoors with a slight smile">
-                            <div class="block p-4 space-y-4">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg md:flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
+                            <img src="assets/prominent-hacker-tsutomu-shimomura.png" class="md:w-64 w-full md:h-64 h-96 object-cover md:rounded-s-lg rounded-t-lg" alt="Black and white portrait of a man speaking with a serious expression">
+                            <div class="block md:p-4 md:space-y-4 py-4 space-y-2">
                                 <h5 class="text-xl font-medium">Tsutomu Shimomura</h5>
-                                <p>Tsutomu Shimomura gained fame for assisting the FBI in capturing Kevin Mitnick in 1995. He chronicled this pursuit in his book Takedown. Currently, Shimomura is the CEO and founder of Neofocal, a company specializing in smart LED networks.</p> 
+                                <p>Tsutomu Shimomura gained fame for assisting the FBI in capturing Kevin Mitnick in 1995. He chronicled this pursuit in his book Takedown. Currently, Shimomura is the CEO and founder of Neofocal, a company specializing in smart LED networks.</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
-                            <img src="assets/prominent-hacker-charlie-miller.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man in front of multiple computer screens in a tech-focused setting">
-                            <div class="block p-4 space-y-4">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg md:flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
+                            <img src="assets/prominent-hacker-charlie-miller.png" class="md:w-64 w-full md:h-64 h-96 object-cover md:rounded-s-lg rounded-t-lg" alt="Black and white portrait of a man speaking with a serious expression">
+                            <div class="block md:p-4 md:space-y-4 py-4 space-y-2">
                                 <h5 class="text-xl font-medium">Charlie Miller</h5>
                                 <p>A former NSA hacker, he is renowned for winning the Pwn2Own contest four times. He was the first to remotely exploit vulnerabilities in iPhones and Android devices. Miller now works at Cruise, focusing on the security of autonomous vehicles</p>
                             </div>
@@ -359,34 +359,37 @@
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
-                            <img src="assets/prominent-hacker-joanna-rutkowska.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Woman with glasses and a neutral expression facing the camera">
-                            <div class="block p-4 space-y-4">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg md:flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
+                            <img src="assets/prominent-hacker-joanna-rutkowska.png" class="md:w-64 w-full md:h-64 h-96 object-cover md:rounded-s-lg rounded-t-lg" alt="Black and white portrait of a man speaking with a serious expression">
+                            <div class="block md:p-4 md:space-y-4 py-4 space-y-2">
                                 <h5 class="text-xl font-medium">Joanna Rutkowska</h5>
                                 <p>Joanna Rutkowska is a cybersecurity expert specializing in rootkit research and development. She founded the Invisible Things Lab, dedicated to enhancing system security. Rutkowska's work has significantly advanced techniques to detect and counter rootkit attacks.</p>
                             </div>
                         </div>
                     </div>
 
+
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
-                            <img src="assets/prominent-hacker-bruce-schneier.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man with a beard and a flat cap wearing a blazer and patterned shirt">
-                            <div class="block p-4 space-y-4">
-                                <h5 class="text-xl font-medium">Bruce Schneier</h5>
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg md:flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
+                            <img src="assets/prominent-hacker-bruce-schneier.png" class="md:w-64 w-full md:h-64 h-96 object-cover md:rounded-s-lg rounded-t-lg" alt="Black and white portrait of a man speaking with a serious expression">
+                            <div class="block md:p-4 md:space-y-4 py-4 space-y-2">
+                                <h5 class="text-xl font-medium">Bruce Scheier</h5>
                                 <p>Bruce Schneier is a highly accomplished figure in cybersecurity, with over 30 years of experience. He has made significant contributions to cryptography, security protocols, risk management, and security policy. Schneier's work has benefited renowned companies like Google.</p>
                             </div>
                         </div>
                     </div>
 
+
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
-                            <img src="assets/prominent-hacker-greg-hoglund.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man smiling with a beard and a stripped polo shirt">
-                            <div class="block p-4 space-y-4">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg md:flex items-center space-x-4 transform transition-all duration-300 hover:scale-105 hover:bg-[#1D1F3E] ease duration-300">
+                            <img src="assets/prominent-hacker-greg-hoglund.png" class="md:w-64 w-full md:h-64 h-96 object-cover md:rounded-s-lg rounded-t-lg" alt="Black and white portrait of a man speaking with a serious expression">
+                            <div class="block md:p-4 md:space-y-4 py-4 space-y-2">
                                 <h5 class="text-xl font-medium">Greg Hoglund</h5>
                                 <p>Greg Hoglund is a renowned computer forensics expert known for his work in combating cyber threats. He holds patents for fault injection methods used in software testing. Hoglund founded HBGary, a notable technology security firm that joined the McAfee Security Innovation Alliance in 2008.</p>
                             </div>
                         </div>
                     </div>
+
                 </div>
             <div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
 
